--- a/HelpCare/app/src/main/res/layout/activity_main.xml
+++ b/HelpCare/app/src/main/res/layout/activity_main.xml
@@ -13,18 +13,19 @@
         android:layout_height="match_parent">
 
         <TabHost
+            android:id="@+id/Tabs"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <TabWidget
                     android:id="@android:id/tabs"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="match_parent" />
 
                 <FrameLayout
                     android:id="@android:id/tabcontent"
@@ -32,7 +33,7 @@
                     android:layout_height="match_parent">
 
                     <LinearLayout
-                        android:id="@+id/Pre - Op"
+                        android:id="@+id/Pre-Op"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="vertical">
@@ -40,7 +41,7 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:id="@+id/In - Op"
+                        android:id="@+id/In-Op"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="vertical">
@@ -48,7 +49,7 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:id="@+id/Post - Op"
+                        android:id="@+id/Post-Op"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="vertical">
